--- a/docs/6.md
+++ b/docs/6.md
@@ -24,7 +24,7 @@ String s2 = "java"; // Good
 
 ---
 
-생성자 대신 static factory mnethod를 사용하여 불필요한 객체 생성을 피할 수 있다.
+생성자 대신 static factory method를 사용하여 불필요한 객체 생성을 피할 수 있다.
 ``` java
 Boolean(String) // X
 Boolean.valueOf(String) // O
